Name:		duck
Version:	0.1
Author:		Geoffrey Irving
Maintainer:     irving@naml.us
License:        BSD3
license-file:	LICENSE
Synopsis:	Functional, semi-typed, JIT-compiled language
Description:	Duck is (will be) a functional, semi-typed, JIT-compiled language designed around heavy use of overloading.
Category:	Compilers/Interpreters
Build-Type:	Simple
Cabal-Version:	>= 1.2
tested-with:    GHC == 6.10.3
extra-source-files: README, duck/test/*.duck

Flag debug
    Description: Enable debug support
    Default:     True

Flag boehm
    Description: Use the Boehm GC
    Default:     False

Executable duck
    Main-is:		Duck.hs
    Build-Depends:	base >= 4 && < 5, containers, pretty, array, mtl, filepath, directory, haskell-src
    other-modules:	Util, Pretty, Var, SrcLoc, Token, Ptrie, Stage, Type, ParseOps, Ast, ParseMonad, Lex, Layout, Parse, Ir, Lir, ToLir, Prettyval, Prims, Base, Value, InferMonad, TypeSet, Infer, ExecMonad, Interp
    hs-source-dirs:	duck
    c-sources:          duck/runtime.c
    if flag(debug)
        ghc-options:	-Wall -fwarn-tabs -fno-warn-missing-signatures -fno-warn-name-shadowing
    if flag(boehm)
        cpp-options:     -DUSE_BOEHM
        extra-libraries: gc
