Name:		duck
Version:	0.1
Author:		Geoffrey Irving
Maintainer:     irving@naml.us
License:        BSD3
license-file:	LICENSE
Synopsis:	Functional, semi-typed, JIT-compiled language
Description:	Duck is (will be) a functional, semi-typed, JIT-compiled language designed around heavy use of overloading.
Category:	Compilers/Interpreters
Build-Type:	Simple
Cabal-Version:	>= 1.2
tested-with:    GHC == 6.10.3, GHC == 7.0.2, GHC == 7.2.1
extra-source-files: README, duck/*.duck, duck/test/*.duck

Flag debug
    Description: Enable debug support
    Default:     True

Flag boehm
    Description: Use the Boehm GC
    Default:     False

Executable duck
    Main-is:		Duck.hs
    Build-Depends:	base == 4.*, containers, pretty, array, transformers == 0.2.*, mtl == 2.*, filepath, directory, bytestring, haskell-src
    other-modules:
        Util
        Pretty
        Memory
        Gen.SrcLoc
        SrcLoc
        Gen.Var
        Var
        Token
        Stage
        ParseMonad
        ParseOps
        Gen.Type
        Type
        IrType
        Ast
        ToHaskell
        Gen.Prims
        Prims
        Ir
        Ptrie
        Gen.Lir
        Lir
        ToLir
        InferMonad
        Gen.Value
        Value
        TypedValue
        PrettyLir
        ExecMonad
        Base
        TypeSet
        Infer
        Gen.Interp
        Interp
        Lex
        Layout
        Parse
    hs-source-dirs:	duck
    c-sources:          duck/runtime.c
    if flag(debug)
        ghc-options:	-Wall -fwarn-tabs -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans
        if impl(ghc >= 7)
            ghc-options: -rtsopts -debug -auto-all -fno-warn-lazy-unlifted-bindings
    if flag(boehm)
        cpp-options:     -DUSE_BOEHM
        extra-libraries: gc
